<resources>
    <string name="app_name">ArtHelper</string>
    <string name="btn_1">Боевой порядок</string>
    <string name="btn_2">Условия стрельбы</string>
    <string name="btn_3">Огневая задача</string>
    <string name="btn_sc_compose">Составить</string>
    <string name="btn_ft_calculate">Рассчитать</string>
    <string name="btn_sc_fill">Заполнить</string>
    <string name="btn_sc_download">Загрузить</string>
    <string name="btn_save">Сохранить</string>

    <string name="tab1_comord">Средства поражения</string>
    <string name="tab2_comord"> Координаты КНП и ОП</string>
    <string name="tab1_system">Система</string>
    <string name="tab1_packet">Снаряд</string>
    <string name="tab1_charge">Заряд</string>
    <string name="tab1_fuse">Взрыватель</string>
    <string name="tab1_range">Дальности:</string>
    <string name="tab1_max">Максимальная:</string>
    <string name="tab1_ricoshet">Рикошетная:</string>
    <string name="tab1_mort">Мортирная:</string>

    <string-array name="name_of_arrays">
        <item>system_array</item>
        <item>packet_array_2s3</item>
        <item>packet_array_2s19</item>
        <item>charge_array_2s19of25</item>
        <item>charge_array_2s19of45</item>
        <item>charge_array_2s3of25</item>
        <item>fuse_array</item>
    </string-array>

    <string-array name="system_array">
        <item>2C3</item>
        <item>2С19</item>
    </string-array>
    <string-array name="packet_array_2s3">
        <item>ОФ25</item>
    </string-array>
    <string-array name="packet_array_2s19">
        <item>ОФ25</item>
        <item>ОФ45</item>
    </string-array>
    <string-array name="charge_array_2s19of25">
        <item>Полный</item>
        <item>Второй</item>
        <item>Третий</item>
        <item>Четвертый</item>
    </string-array>
    <string-array name="charge_array_2s19of45">
        <item>Дальнобойный</item>
        <item>Полный</item>
        <item>Второй</item>
        <item>Третий</item>
        <item>Четвертый</item>
    </string-array>
    <string-array name="charge_array_2s3of25">
        <item>Третий</item>
        <item>Шестой</item>
    </string-array>
    <string-array name="fuse_array">
        <item>РГМ2</item>
    </string-array>

    <string name="tab1_shootcond">Наземные метеоусловия</string>
    <string name="tab2_shootcond">Баллистические условия</string>
    <string name="tab3_shootcond">Определение координат цели</string>
    <string name="tab4_shootcond">Поправки</string>
    <string name="tab1_press">Давление:</string>
    <string name="tab1_temper">Температура:</string>
    <string name="tab1_direction">Направление ветра:</string>
    <string name="tab1_firetask">Установки для стрельбы</string>
    <string-array name="wind_speed_array">
        <item>Скорость ветра:</item>
        <item>Дальность сноса пуль:</item>
    </string-array>
    <string name="tab1_height_meteo">Высота метеопоста:</string>

    <string name="tab2_temper_charge">Температура заряда:</string>
    <string name="tab2_vo_sum">Vo сум:</string>
    <string name="tab3_dk">Дк:</string>
    <string name="tab3_ac">Aц:</string>
    <string name="tab3_mc">Мц:</string>
    <string name="tab2_aon">Aон:</string>
    <string name="btn_pgz">ПГЗ</string>

    <string name="tab4_opor">Опорн.</string>
    <string name="tab4_range">Дальность</string>
    <string name="tab4_direction">Напр-ние</string>
    <string name="tab4_in_direction">В направлении:</string>
    <string name="btn_calculate">Расчитать</string>
    <string name="tab4_meteo_sr">Метеосредний</string>
    <string name="tab4_ddchm">ддччм</string>
    <string name="tab4_h_dmk">выс ДМК</string>
    <string name="tab4_press">давл</string>
    <string name="tab4_temper">темп</string>
    <string name="btn_back">Назад</string>

    <string name="tab1_firetask_pr">Пр</string>
    <string name="tab1_firetask_ur">Ур</string>
    <string name="tab1_firetask_dovi">dи</string>
    <string name="tab1_firetask_ku">КУ</string>
    <string name="tab1_firetask_shu">ШУ</string>
    <string name="tab1_firetask_op">ОП</string>
    <string name="tab1_firetask_Dt">Дт</string>
    <string name="tab1_firetask_At">Ат</string>
    <string name="tab1_firetask_dt">dт</string>
    <string name="tab1_firetask_Ec">Ец</string>
    <string name="tab1_firetask_Di">Ди</string>
    <string name="tab1_firetask_Ai">Аи</string>
    <string name="tab1_firetask_ps">ПС</string>
    <string name="tab1_firetask_delx">Xтыс</string>

    <string name="meteo_connection_error">Ошибка загрузки метеоданных! Проверьте подключение сети!</string>
    <string name="meteo_gps_error">Ошибка загрузки метеоданных! Активируйте GPS!</string>
    <string name="succ_save_data">Данные успешно сохранены</string>
    <string name="error_Ac">Для рассчета введите Aц</string>
    <string name="error_Dk">Для рассчета введите Дк</string>
    <string name="error_XYknp">Для рассчета введите координаты КНП в Боевом порядке</string>
    <string name="error_H">Для составления введите Давление</string>
    <string name="error_T">Для составления введите Температуру</string>
    <string name="error_W">Для составления введите Направление ветра</string>
    <string name="error_DorV">Для составления введите Скорость ветра (Дальность сноса пуль)</string>
    <string name="error_hmp">Для составления введите Высоту метеопоста</string>
    <string name="error_meteo">Для расчета составьте метеосредний</string>
    <string name="error_ballistic">Для расчета введите данные Баллистика</string>
    <string name="error_Tz">Для расчета введите Температуру заряда в Условиях стрельбы, вкладка Баллистика</string>
    <string name="error_Vosum">Для расчета введите Voсум заряда в Условиях стрельбы, вкладка Баллистика</string>
    <string name="error_A">Для расчета введите угол "В направлении"</string>
    <string name="error_destruct">Для расчета выберите Средства поражения в Боевом порядке"</string>
    <string name="error_bp">Для расчета введите координаты в Боевом порядке"</string>
    <string name="error_target">Для расчета введите координаты Цели в Условиях стрельбы"</string>
    <string name="error_aon">Для расчета введите основное направление стельбы в Боевом порядке</string>
    <string name="error_op">Для расчета введите координаты огневой позиции в Боевом порядке</string>
    <string name="error_knp">Для расчета введите координаты КНП в Боевом порядке</string>

</resources>
