<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/headerTab1ShootCond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/colorTextHeader"
        android:text="@string/tab1_firetask"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_tabl"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_pr"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_ur"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_di"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_tabl"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edtPr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtUr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtdi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_tabl"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_ku"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_shu"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_op"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_tabl"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edtKu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtShu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtOp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_tabl"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_Dt"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtDt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_Di"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtDi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_tabl"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_At"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtAt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_Ai"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtAi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_tabl"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_dt"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtdt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_ps"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_tabl"
            android:layout_weight="1"
            android:background="@color/textBlack"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_Ec"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tab1_firetask_delx"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="@color/textBlack"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/colorHeaderTab"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/edtdelx"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="none"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="2dp"
                android:background="@color/textButton"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>